[workspace]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[package]
name = "qwq"
version = "0.0.1"
edition = "2024"
description = "A CLI tool for rolling snowballs!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canmi21/qwq"
readme = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"

[lints]
workspace = true
